--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 torch>=1.9.0
+torchvision>=0.10.0
 transformers>=4.5.0
 Pillow>=8.0.0
 gradio>=2.0.0
 tqdm>=4.62.0
 python-dotenv>=0.19.0
 psutil>=5.9.0
+SpeechRecognition>=3.8.1
+gTTS>=2.2.3
+pyaudio>=0.2.11
+kaggle>=1.5.12
